# qwikvote

./: README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
qwikvote-api/: main.py  pyproject.toml  requirements.txt  start.sh
qwikvote-api/poll/: errors.py  models.py  repository.py  routes.py  service.py
qwikvote-api/randomness/: service.py
qwikvote-api/suggestion/: routes.py  service.py
qwikvote-cdk/: .env.example  .gitignore  cdk.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
qwikvote-cdk/src/: app.ts
qwikvote-cdk/src/configuration/: application.ts
qwikvote-cdk/src/stacks/: github-actions-stack.ts  voting-service-stack.ts  website-stack.ts
qwikvote-website/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
qwikvote-website/public/: site.webmanifest
qwikvote-website/src/: index.css  routeTree.gen.ts
qwikvote-website/src/components/layout/: header.tsx
qwikvote-website/src/components/shared/: confetti-overlay.tsx  feature-card.tsx  option-card.tsx  password-input.tsx  poll-skeleton.tsx  score-bar.tsx  share-panel.tsx  step-indicator.tsx  veto-button.tsx  weight-picker.tsx
qwikvote-website/src/features/poll/: queries.ts
qwikvote-website/src/lib/: api-client.ts  schemas.ts
qwikvote-website/src/routes/: __root.tsx  create.tsx  index.tsx
qwikvote-website/src/routes/poll/: $pollId.tsx
qwikvote-website/src/stores/: password-store.ts  vote-store.ts
scripts/: test-local-api-loop.sh  test-local-api.sh
