[project]
name = "qwikvote-api"
version = "0.1.0"
description = "QwikVote Voting Service — FastAPI on AWS Lambda via Mangum"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "mangum>=0.19.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "returns>=0.23.0",
    "toolz>=1.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]>=0.32.0",
    "boto3-stubs[dynamodb]>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
